add new jobs - migrations, collectstatic, runserver

--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -28,3 +28,13 @@ jobs:
     - name: Run Tests
       run: |
         python ./DjangoReact/manage.py test
+    - name: Execute Django Migrations
+      run: |
+        python ./DjangoReact/manage.py makemigrations
+        python ./DjangoReact/manage.py migrate
+    - name: Execute Django Collect Static
+      run: |
+        python ./DjangoReact/manage.py collectstatic --noinput
+    - name: Execute Django Runserver
+      run: |
+        python ./DjangoReact/manage.py runserver
