--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -8,13 +8,11 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
     strategy:
       max-parallel: 2
       matrix:
         python-version: [3.11]
-
     steps:
     - uses: actions/checkout@v3
     - name: Set up Python ${{ matrix.python-version }}
@@ -35,6 +33,18 @@ jobs:
     # - name: Execute Django Collect Static
     #   run: |
     #     python ./DjangoReact/manage.py collectstatic --noinput
+    # - name: Execute Django Runserver
+    #   run: |
+    #     python ./DjangoReact/manage.py runserver
+  production: 
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v3
+    - name: Set up Python ${{ matrix.python-version }}
+      uses: actions/setup-python@v3
+      with:
+        python-version: ${{ matrix.python-version }}
     - name: Execute Django Runserver
       run: |
         python ./DjangoReact/manage.py runserver
