--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -7,7 +7,7 @@ on:
     branches: [ "main" ]
 
 jobs:
-  build:
+  health-check:
     runs-on: ubuntu-latest
     strategy:
       max-parallel: 2
@@ -36,15 +36,12 @@ jobs:
     # - name: Execute Django Runserver
     #   run: |
     #     python ./DjangoReact/manage.py runserver
-  production: 
-    needs: build
+  build-image: 
     runs-on: ubuntu-latest
+    needs: [health-check]
     steps:
-    - uses: actions/checkout@v3
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v3
-      with:
-        python-version: ${{ matrix.python-version }}
-    - name: Execute Django Runserver
+    - name: Checkout Code
+      uses: actions/checkout@v3
+    - name: Build Docker Image
       run: |
-        python ./DjangoReact/manage.py runserver
+        docker build -t django-react .
