--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -44,4 +44,4 @@ jobs:
       uses: actions/checkout@v3
     - name: Build Docker Image
       run: |
-        docker build -t django-react .
+        docker-compose up --build web
