--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -44,4 +44,5 @@ jobs:
       uses: actions/checkout@v3
     - name: Build Docker Image
       run: |
-        docker-compose up --build web
+        cd DjangoReact
+        docker build -t django-react .
