--- a/.github/workflows/react.yml
+++ b/.github/workflows/react.yml
@@ -28,5 +28,5 @@ jobs:
           node-version: ${{ matrix.node-version }}
       - name: npm ci, build and test
         run: |
-          npm ci
-          npm run build --if-present
+          cd my-app
+          npm run build
